Updating unit tests to be parameterized where possible